[package]
name = "code-blocks"
version = "0.3.0"
edition = "2021"
authors = ["Tom Selfin selfint@gmail.com"]
description = "A library to re-order your code"
readme = "README.md"
repository = "https://github.com/selfint/code-blocks"
license = "MIT"
keywords = ["refactor", "tree-sitter"]
categories = ["parsing", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tree-sitter = "0.20.9"

[dev-dependencies]
insta = { version = "1.26.0", features = ["yaml"] }
similar-asserts = "1.4.2"
tree-sitter-python = "0.20.2"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.2"
