[package]
name = "tree-sitter-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
libloading = "0.7.4"
tree-sitter = "0.20.9"

[dev-dependencies]
insta = "1.28.0"
tempfile = "3.4.0"
